Dark mode image color correction

--- a/src/_scss/_portfolio.scss
+++ b/src/_scss/_portfolio.scss
@@ -141,6 +141,12 @@ body.project {
             display: none;
         }
     }
+
+    @media (prefers-color-scheme: dark) {
+        img[src$=".svg"] {
+            filter: contrast(0.01) brightness(2);
+        }
+    }
 }
 
 ul.grid {
